# Shell

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  a  command_history.txt  main.c  run.sh
config/: alias  history  pipeline  shellrc
include/: builtin.h  command.h  external.h  process.h  types.h  utils.h
src/: builtin.c  command.c  external.c  main  main.c  parser.c  process.c  types.c  utils.c
test/: data.txt  main  main.c  test.txt  utils.c
